--- a/Pipfile
+++ b/Pipfile
@@ -4,10 +4,13 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+autopep8 = "*"
 
 [packages]
 requests = "*"
 beautifulsoup4 = "*"
+doctopt = "*"
+pyinquirer = "*"
 
 [requires]
 python_version = "3.7"
